# reynard-the-robot

./: .gitignore  README.md  pyproject.toml  reynard-the-robot.spec  run.py
.github/workflows/: installers.yml  precommit.yml
docs/: .gitignore  api_reference.rst  conf.py  http_rest.md  index.rst  requirements.txt  robotraconteur.md  ros.md  socket.md
docs/examples/: cpp_example.rst  cs_example.rst  index.rst  java_example.rst  labview_example.rst  matlab_example.rst  python_api_example.rst  python_rest_example.rst  python_robotraconteur_example.rst  python_socket_example.rst  ros_examples.rst
docs/reynard_the_robot/: api_reference.rst
examples/: reynard_api_client.py  reynard_ascii_socket_client.py  reynard_http_rest_client.py  reynard_robotraconteur_client.py
examples/cpp/: CMakeLists.txt  README.md  reynard_robotraconteur_client.cpp
examples/cs/: README.md  reynard_robotraconteur_client.cs  reynard_robotraconteur_client.csproj
examples/java/: .gitignore  README.md  reynard_robotraconteur_client.java
examples/matlab/: reynard_robotraconteur_client.m
packaging/nsis/: license.txt  setup.nsi
src/reynard_the_robot/: __init__.py  __main__.py  ascii_socket.py  gui.py  main.py  reynard.py  robotraconteur.py
src/reynard_the_robot/web_static/: app.js  index.html  style.css
