[project]

name = "reynard-the-robot"
version = "0.2.1"
description = "Reyndard the Robot Raconteur educational Robot"
readme = "README.md"
license = {file = "LICENSE.txt"}
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]

dependencies =[
    "robotraconteur",
    "aiohttp",
    "python-socketio",
    "drekar-launch-process",
    "importlib-resources",
    'blinker',
    'requests'
]

[project.optional-dependencies]
gui = [
    "pyside6"
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[tool.setuptools.package-data]
"reynard_the_robot.web_static" = ["*.html", "*.js", "*.css", "*.csv", "*.svg", "*.ico", "*.png"]

[project.urls]
Documentation = "https://github.com/robotraconteur/reynard-the-robot"
Source = "https://github.com/robotraconteur/reynard-the-robot"